# app/server/src/interfaces/auth-service.interface.ts
@@ -10,7 +10,7 @@ export interface AuthServiceInterface{
   logout(): Promise<any>;
   forgot(): Promise<any>;
   reset(): Promise<any>;
-  refresh(refreshToken: string): Promise<any>;
+  refresh(refreshToken: string, req: Request): Promise<any>;
 
   
 }
